Fixed bug which caused the points in the leaderboard for the contestants not to be visible.

--- a/src/Mainframe/WebInterfaces/public_html/css/contestant.css
+++ b/src/Mainframe/WebInterfaces/public_html/css/contestant.css
@@ -204,7 +204,13 @@ ol.scorelist li:nth-child(even)
     display: block;
 }
 
-.scorelist .title-bar::after{
+.scorelist .title-bar
+{
+    overflow:visible;
+}
+
+.scorelist .title-bar::after
+{
     content:'.';
     height:0;
     display: block;
